--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,9 +2,9 @@
     "version": 2,
     "name": "finance-manager",
     "builds": [
-        {"src": "app.js", "use": "@vercel/node"}
+        {"src": "./app.js", "use": "@vercel/node"}
     ],
     "routes": [
-        {"src": "/(.*)", "dest": "/server.js"}
+        {"src": "/(.*)", "dest": "/"}
     ]
 }
